Persisted json.